compiler/tests/success/subarrays/test1.jazz
export fn test () -> reg u64 {
  stack u64[10] s;
  reg ptr u64[1] t;
  reg u64 r;
  t = s[0:1];
  t.[0] = 0;
  s[0:1] = t;  
  r = s[0];
  return r;
}
