compiler/tests/fail/pointers/x86-64/test_writable_arguments.jazz
fn f(reg ptr u64[1] t) -> reg ptr u64[1] {
   t[0] = 1;
   return t;
}

export fn gfail() -> reg u64{
  stack u64[1] s;
  reg const ptr  u64[1] t;
  t = s;
  s = f(t);
  reg u64 r;
  r = s[0];
  return r;
}

